# libchardet

./: .gitignore  CMakeLists.txt  Changelog  LibChardetConfig.cmake.in  Makefile.am  Makefile.in  chardet-config.h.in  chardet.pc.in  configure  configure.ac
include/: version.h
man/: Makefile.am  Makefile.in
man/en/: detect.3  detect_destroy.3  detect_file.3  detect_init.3  detect_reset.3
man/man3/en/: detect_handledata.3  detect_obj_free.3  detect_obj_init.3
src/: Makefile.am  Makefile.in  chardet.cpp  chardet.h
src/chardet/: chardet.h
test/: Makefile.in
